<resources>
    <string name="app_name">PosDemo</string>
    <string name="action_settings">Settings</string>
    <string name="spacebar">Spacebar</string>
    <string name="start">Start</string>
    <string name="strContinue">Continue</string>
    <string name="clean">Clean</string>
    <string name="result">Result : </string>
    <string name="stop">Stop</string>
    <string name="icc">ICC</string>
    <string name="scan">Scanner</string>
    <string name="idcard">IDCard</string>
    <string name="print">Print</string>
    <string name="finger">Finger</string>
    <string name="mcr">MSR</string>
    <string name="picc">NFC</string>
    <string name="pci">PCI</string>
    <string name="sys">Sys</string>
    <string name="emv">EMV</string>
    <string name="swipe">Swipe Card Please</string>
    <string name="update">Update</string>
    <string name="upgrade_os">Upgrade OS</string>
    <string name="test_uart">Test_uart</string>
    <string name="others">Others</string>
    <string name="signature">Signature</string>
    <string name="key">Key</string>
    <string name="led">Led</string>
    <string name="test">Test</string>
    <string name="Beep">Beep</string>
    <string name="title_activity_picc">Picc Test</string>
    <string name="title_activity_icc">Icc Test</string>
    <string name="title_activity_pci">Pci Test</string>
    <string name="title_activity_msr">Msr Test</string>
    <string name="title_activity_others">Others Test</string>
    <string name="title_activity_scan">Scan Test</string>
    <string name="title_activity_idcard">IDCard Test</string>
    <string name="title_activity_finger">Finger Test</string>
    <string name="title_activity_print">print Test</string>
    <string name="title_activity_key">Key Test</string>
    <string name="wait_time">Test NFC card...</string>
    <string-array name="check_card">Checking card...</string-array>
    <string name="isOpening">Please Wait a moment,Opening...</string>
    <string name="clik_start">Please put your card and click Start</string>
    <string name="update_finish">Update Finish \n Please restart the app</string>
    <string name="update_fail">Update Failed</string>
    <string name="isUpdating">Please Wait a moment,Updating... \n  Please do not perform any other operations </string>
    <string name="isMcuOn">Please Wait a moment,the MCU is turning on... \n  Please do not perform any other operations </string>
    <string name="aid_dlg_title">Please Select AID </string>
    <string name="update_or_not">Upgrade?</string>
    <string name="mcrTitle">MCR open failed, please try again...</string>
    <string name="emvTips">Please insert card for testing...</string>
    <string name="blockTips">Please enter block No.~</string>
    <string name="writeTips">Please Enter the data you want to write~</string>
    <string name="zeroAmt_support">Zero Amt Support</string>
    <string name="upgradeTips">In order to update the system, it will not be interrupted accidentally, so the Back button event is blocked in this interface. Are you sure to continue ?</string>
    <string name="upgradeZip">Step 1: to rename the file that needs to be upgraded to "upgrade.zip";\n\nStep 2: place "upgrade.zip" in the file system and directory;\n\nStep 3: click the button to upgrade;</string>
    <string name="back">BACK</string>
    <string name="more">more</string>
    <string name="scanContinuousMode">Continuous</string>
    <string name="scanNormalMode">Normal</string>
    <string name="scanStart">Start / Stop</string>
    <string name="scanStop">Stop</string>
    <string name="scanDisable">Close Scanner</string>
    <string name="scanEnable">Open Scanner</string>
    <string name="title_fiscal">Fiscal</string>
    <string name="fiscal_test">send: 04010030ffcd</string>
    <string name="fiscal_open">Open</string>
    <string name="fiscal_send">Send</string>
    <string name="fiscal_close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file_not_found">No upgrade firmware found</string>
    <string name="file_not_found_update_os">No upgrade os file found</string>
    <string name="title_bluetooth">Bluetooth connect</string>
    <string name="title_writing">Please sign in the box</string>
    <string name="title_home">China UnionPay</string>
    <string name="selectGray">Select Printer Density :   </string>
    <string name="fallback_or_not">whether to continue with Mag stripe or chip?</string>
    <string name="confirm_card_number">Confirm Card Number</string>
    <string-array name="menu_imgs">
        <item name="icon1">Receivables</item>
        <item name="icon1">Government payment</item>
        <item name="icon1">Transfer accounts</item>
        <item name="icon1">Credit card payment</item>
        <item name="icon1">Game currency</item>
        <item name="icon1">Balance inquiry</item>
        <item name="icon1">Prepaid Refill</item>
        <item name="icon1">lottery</item>
        <item name="icon1">Cinema</item>
    </string-array>
    <string name="menu_exit">Exit</string>
    <string name="bt_connect_text">Bluetooth connection with touch Icon</string>
    <string name="handwrite_tip">Please sign in the box</string>
    <string-array name="bankname">
        <item name="01020000">ICBC</item>
        <item name="01030000">ABC</item>
        <item name="01040000">BC</item>
        <item name="01050000">CBC</item>
        <item name="01000000">PSBC</item>
        <item name="03010000">BCM</item>
        <item name="03020000">CCB</item>
        <item name="03030000">CEB</item>
        <item name="03040000">HXB</item>
        <item name="03050000">CMBC</item>
        <item name="03060000">GDB</item>
        <item name="03070000">SDB</item>
        <item name="03080000">CMB</item>
        <item name="03090000">CIB</item>
        <item name="03100000">SPDB</item>
        <item name="01000001">PS</item>
        <item name="04478210">BANK OF LANZHOU</item>
        <item name="00010000">UnionPay Center</item>
        <item name="01020000">Wuhan Xinhe</item>
        <item name="04325260">Yichang firm</item>
        <item name="04145210">Wuhan firm</item>
    </string-array>
    <string-array name="bankid">
        <item name="01020000">01020000</item>
        <item name="01030000">01030000</item>
        <item name="01040000">01040000</item>
        <item name="01050000">01050000</item>
        <item name="01000000">01000000</item>
        <item name="03010000">03010000</item>
        <item name="03020000">03020000</item>
        <item name="03030000">03030000</item>
        <item name="03040000">03040000</item>
        <item name="03050000">03050000</item>
        <item name="03060000">03060000</item>
        <item name="03070000">03070000</item>
        <item name="03080000">03080000</item>
        <item name="03090000">03090000</item>
        <item name="03100000">03100000</item>
        <item name="01000001">01000001</item>
        <item name="04478210">04478210</item>
        <item name="00010000">00010000</item>
        <item name="01020000">01020000</item>
        <item name="04325260">04325260</item>
        <item name="04145210">04145210</item>
    </string-array>
    <string-array name="keyNo">
        <item> keyNo 0 </item>
        <item> keyNo 1 </item>
        <item> keyNo 2 </item>
        <item> keyNo 3 </item>
        <item> keyNo 4 </item>
        <item> keyNo 5 </item>
        <item> keyNo 6 </item>
        <item> keyNo 7 </item>
        <item> keyNo 8 </item>
        <item> keyNo 9 </item>
    </string-array>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_icc4428">Icc4428Activity</string>
    <string name="title_activity_icc4442">Icc4442Activity</string>
    <string name="conn">Initialize service</string>
    <string name="transaction">Transaction</string>
    <string name="read_log">Read log</string>
    <string name="function_setting">TermParam Setting</string>
    <string name="other_setting">Param Download</string>
    <string name="clear_log">Clear log</string>
    <string name="pinkeypadtest">pinkeypad test</string>
    <string name="last_transaction_result">Last transaction result</string>
    <string name="start_auto_testing">Start Auto test</string>
    <string name="stop_auto_testing">Stop auto test</string>
    <string name="exit">Exit</string>
    <string name="transaction_log">Transaction log</string>
    <string name="transfer_log">Transfer log</string>
    <string name="select_transaction_type">Select trans type</string>
    <string name="force_acceptance">Force Accept</string>
    <string name="select_account_type">Select account type</string>
    <string name="data_acquisition">Data capture</string>
    <string name="forced_online">Force online</string>
    <string name="compulsory_approval">Force accept</string>
    <string name="print_setting">Print setting</string>
    <string name="getdata_pin">GetData for PIN</string>
    <string name="bypass_pin">Bypass PIN</string>
    <string name="bypass_all">Bypass PIN All</string>
    <string name="support_pse">PSE Select</string>
    <string name="use_term_aip">Use TermAIP for TRM</string>
    <string name="support_advice">Advice</string>
    <string name="support_sm">SM Algorithm</string>
    <string name="support_multi_language">Multi Language</string>
    <string name="language_select_method">Language Select</string>
    <string name="support_exceptfile">Exception File</string>
    <string name="support_account_select">Account Select</string>
    <string name="support_readlog">Read Log</string>
    <string name="terminal_type">Set Term Type</string>
    <string name="interface_device_sn">Set IFD SN</string>
    <string name="terminal_capacity">Set Term Capacity</string>
    <string name="add_terminal_capacity">Set Add Term Capa</string>
    <string name="clss_ttq">Set TTQ</string>
    <string name="input_null_error">Input can\'t be null</string>
    <string name="set_autotest_interval">Set AutoTest Interval</string>
    <string name="tm_date">Set Terminal Data</string>
    <string name="tm_time">Set Terminal Time</string>
    <string name="set_curr_code">Set Currency code</string>
    <string name="set_curr_exp">Set Currency Exp.</string>
    <string name="set_country_code">Set Country code</string>
    <string name="set_send_receipt">Set Send Receipt</string>
    <string name="support_clss">Support CLSS</string>
    <string name="set_config">setCfg</string>
    <string name="checksum">checksum</string>
    <string name="update_pub_key">Update CA public key</string>
    <string name="update_aid">Update AID parameter</string>
    <string name="update_terminal_params">Update terminal parameter</string>
    <string name="update_blacklist">Update black list</string>
    <string name="update_recovery_public_key">Update revoke CA public key</string>
    <string name="batch_delivery">Batch data upload</string>
    <string name="set_merchant_name">Set merchant name</string>
    <string name="text_merchant_name">Merchant name</string>
    <string name="merchant_name_null_error">Merchant name can\'t be null</string>
    <string name="clear_transaction_log">Clear transaction log</string>
    <string name="select">Please select</string>
    <string name="Auth_OK">Auth OK</string>
    <string name="Auth_Error">Auth Error</string>
    <string name="input_money">Please input transaction amount:</string>
    <string name="edit_input_money">Please input transaction amount(Unit:cent)</string>
    <string name="back_money">Whether cash back</string>
    <string name="input_other_money">Please input other amount:</string>
    <string name="confirm">@string/ok</string>
    <string name="ip_address">IP Address:</string>
    <string name="port">Port:</string>
    <string name="server_config_input_prompt">Please input IP and Port</string>
    <string name="save_terminal_params">Save</string>
</resources>