<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrayBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <test.demo.activity.setting.ListItemView
            android:id="@+id/select_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/select_transaction_type"
            app:itemType="plain_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/select_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/select_account_type"
            app:itemType="plain_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/terminal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/terminal_type"
            app:itemType="plain_text"
            app:showDivider="true"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/force_acceptance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/force_acceptance"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/forced_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/forced_online"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_pse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_pse"
            app:itemType="toggle"
            app:showDivider="false"/>

        <test.demo.activity.setting.ListItemView
            android:id="@+id/bypass_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/bypass_pin"
            app:itemType="toggle"
            app:showDivider="false" />

        <test.demo.activity.setting.ListItemView
            android:id="@+id/use_term_aip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/use_term_aip"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_contactless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_clss"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_sm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_sm"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_multi_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_multi_language"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/language_select_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/language_select_method"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_advice"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_account_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_account_select"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_exceptfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/support_exceptfile"
            app:itemType="toggle"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/support_zeroAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemText="@string/zeroAmt_support"
            app:itemType="toggle"
            app:showDivider="true"/>
        <test.demo.activity.setting.ListItemView
            android:id="@id/interface_device_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/interface_device_sn"
            app:inputType="text"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@id/terminal_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/terminal_capacity"
            app:inputType="text"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@id/add_terminal_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/add_terminal_capacity"
            app:inputType="text"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@id/clss_ttq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/clss_ttq"
            app:inputType="text"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/tm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/tm_time"
            app:inputType="number"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/set_currency_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/set_curr_code"
            app:inputType="number"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@+id/set_currency_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/set_curr_exp"
            app:inputType="number"
            app:itemType="edit_text"
            app:showDivider="false"/>
        <test.demo.activity.setting.ListItemView
            android:id="@id/set_country_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="true"
            app:itemText="@string/set_country_code"
            app:inputType="number"
            app:itemType="edit_text"
            app:showDivider="true"/>

        <Button
            android:id="@+id/set_config"
            style="@style/CommonButtonStyle"
            android:layout_width="@dimen/px200dp"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/px120dp"
            android:layout_marginRight="@dimen/px30dp"
            android:layout_marginTop="@dimen/px60dp"
            android:text="@string/save_terminal_params"/>



    </LinearLayout>

</ScrollView>