<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/update_pub_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:textSize="28sp"
            android:text="@string/update_pub_key"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/update_aid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:textSize="28sp"
            android:text="@string/update_aid"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/update_terminal_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:textSize="28sp"
            android:text="@string/update_terminal_params"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/update_blacklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:textSize="28sp"
            android:text="@string/update_blacklist"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/update_recovery_public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:textSize="28sp"
            android:text="@string/update_recovery_public_key"
            android:textAllCaps="false" />

        <!--        <Button-->
        <!--            android:id="@+id/batch_upload"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/batch_delivery"-->
        <!--            android:textAllCaps="false" />-->

        <!--        <Button-->
        <!--            android:id="@+id/set_merchant_name"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/set_merchant_name"-->
        <!--            android:textAllCaps="false" />-->

    </LinearLayout>

</ScrollView>