<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

<!--        <Button-->
<!--            android:id="@+id/conn"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:background="@drawable/shape_button"-->
<!--            android:textSize="28sp"-->
<!--            android:text="@string/conn"-->
<!--            android:textAllCaps="false" />-->

        <Button
            android:id="@+id/transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:text="@string/transaction"
            android:textAllCaps="false" />

        <!--        <Button-->
        <!--            android:id="@+id/read_log"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/read_log"-->
        <!--            android:textAllCaps="false" />-->

        <Button
            android:id="@+id/function_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:text="@string/function_setting"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/other_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:text="@string/other_setting"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/pinkeypadtest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:text="@string/pinkeypadtest"
            android:textAllCaps="false" />
        <!--        <Button-->
        <!--            android:id="@+id/clear_log"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/clear_log"-->
        <!--            android:textAllCaps="false" />-->

        <!--        <Button-->
        <!--            android:id="@+id/last_transaction_result"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/last_transaction_result"-->
        <!--            android:textAllCaps="false" />-->

        <!--        <Button-->
        <!--            android:id="@+id/auto_testing"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/start_auto_testing"-->
        <!--            android:textAllCaps="false" />-->

        <!--        <Button-->
        <!--            android:id="@+id/exit"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/exit"-->
        <!--            android:textAllCaps="false" />-->
    </LinearLayout>
</ScrollView>